# naive_text

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: app.rs  main.rs  types.rs
frontend/src/pages/: home.rs  mod.rs  person.rs  query.rs  timeline.rs
output/: events.json  locations.json  persons.json  timeline.json
scripts/: era_years.json  pyproject.toml  scrape_eras.py
src/: event.rs  extract.rs  intext.rs  main.rs  parser.rs  regime.rs  scanner.rs  surname.rs  titles.rs  types.rs
tests/fixtures/: expected_stats.json
types/: Cargo.toml
types/src/: lib.rs
南齊書/00_本紀/01_本紀第二　高帝下/: 01_目录.txt  02_建元元年.txt  06_史論.txt
南齊書/00_本紀/02_本紀第三　武帝/: 01_目录.txt  03_永明元年.txt  06_永明四年.txt  09_永明七年.txt  12_永明十年.txt  13_永明十一年.txt
南齊書/00_本紀/03_本紀第四　鬱林王/: 01_目录.txt
南齊書/00_本紀/04_本紀第五　海陵王/: 01_目录.txt
南齊書/00_本紀/05_本紀第六　明帝/: 02_建武元年.txt  03_建武二年.txt  05_建武四年.txt  06_永泰元年.txt
南齊書/00_本紀/06_本紀第七　東昏侯/: 01_目录.txt  02_永泰元年.txt  03_永元元年.txt  04_永元二年.txt  06_史論.txt
南齊書/00_本紀/07_本紀第八　和帝/: 01_目录.txt  03_中興元年.txt
南齊書/01_志/01_志第二　禮下/: 01_目录.txt
南齊書/01_志/02_志第三　樂/: 02_樂.txt
南齊書/01_志/03_志第四　天文上/: 03_月蝕.txt  04_日光色.txt
南齊書/01_志/04_志第五　天文下/: 01_目录.txt  04_老人星.txt
南齊書/01_志/05_志第六　州郡上/: 02_揚州.txt  04_豫州.txt  05_南豫州.txt  06_南兖州.txt  13_交州.txt
南齊書/01_志/06_志第七　州郡下/: 03_巴州.txt  08_梁州.txt  09_秦州.txt  11_寧州.txt
南齊書/01_志/07_志第八　百官/: 03_百官.txt
南齊書/01_志/08_志第九　輿服/: 01_目录.txt  02_序.txt  03_輿服.txt
南齊書/01_志/09_志第十 祥瑞/: 01_目录.txt
南齊書/01_志/10_志第十一 五行/: 01_目录.txt
南齊書/02_列傳/00_列傳第一　皇后/: 01_目录.txt
(+3193 files in other folders)
