[package]
name = "naive-text-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = { version = "0.6", features = ["http"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
